syntax = "proto3";

package messages;

message ProbeACK {
    enum Type {
        HELLO = 0;
        RESULT = 1;
    }
    Type type = 1;
    string id = 2;
    string ipaddress = 3;
    string auth = 4;
    string label = 5;
    string location = 6;
    ProbeResult result = 7;
}

message ProbeResult {
    enum Type {
        NOOP = 0;
        TCP = 1;
        ICMP = 2;
    }
    Type type = 1;
    string cmdId = 2;
    string host = 3;
    string probeId = 4;
    int64 timestamp = 5;
    bytes data = 6;
}

message ProbeCommand {
    enum Type {
        NOOP = 0;
        TCP = 1;
        ICMP = 2;
    }
    string id = 1;
    string host = 2;
    Type type = 3;
    map<string,string> parameters = 4;
}
